--- a/src/client/css/scene.css
+++ b/src/client/css/scene.css
@@ -32,3 +32,19 @@
   color: grey;
   font-size: 75%;
 }
+
+.ending {
+  background-color: #354942;
+  padding: 24px;
+  margin-top: 50px;
+  margin-bottom: 24px;
+}
+
+.endingTitle {
+  font-size: 26px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.endingDescription {
+}
