--- a/src/client/css/global.css
+++ b/src/client/css/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:400,400i,700,700i&display=swap');
+
 * {
   box-sizing: border-box;
 }
