--- a/src/client/css/scene.css
+++ b/src/client/css/scene.css
@@ -1,12 +1,20 @@
 .sceneWrap {
   overflow-y: scroll;
   height: 100%;
+  display: flex;
+  justify-content: center;
 }
 .scene {
-  margin: auto;
-  max-width: 550px;
+  flex: 0 1 550px;
+  min-height: 100%;
   padding-left: 25px;
   padding-right: 25px;
+  display: flex;
+  flex-direction: column;
+}
+
+.grow {
+  flex: 1;
 }
 
 .option {
